--- a/ManagementSystem/ManagementSystem/Views/Basket/UserBasketView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Basket/UserBasketView.axaml
@@ -10,8 +10,6 @@
              x:DataType="vm:UserBasketViewModel">
     <UserControl.Resources>
         <converter:BytesImageConverter x:Key="ImageConverter"/>
-        <converter:SequenceIsNotEmptyConverter x:Key="SequenceIsNotEmptyConverter"/>
-        <converter:SequenceIsEmptyConverter x:Key="SequenceIsEmptyConverter"/>
     </UserControl.Resources>
     <Grid RowDefinitions="Auto * Auto">
         <Panel Grid.Row="0"
@@ -30,7 +28,7 @@
             <Border Padding="10"
                     CornerRadius="8"
                     Background="White"
-                    IsVisible="{Binding UserBasketService.Products, Converter={StaticResource SequenceIsEmptyConverter}}"
+                    IsVisible="{Binding UserBasketService.UserBasketProductsIsEmpty}"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Center">
                 <TextBlock Text="{Binding UserStorageService.CurrentUser.FirstName, FallbackValue='User not logged', StringFormat='\{0}`s basket is empty'}"
@@ -39,7 +37,7 @@
             </Border>
             <ScrollViewer Padding=" 0 0 20 0">
                 <ItemsControl ItemsSource="{Binding UserBasketService.Products}"
-                              IsVisible="{Binding UserBasketService.Products, Converter={StaticResource SequenceIsNotEmptyConverter}}">
+                              IsVisible="{Binding !UserBasketService.UserBasketProductsIsEmpty}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel Orientation="Horizontal"/>
@@ -154,12 +152,13 @@
         </Panel>
         <Panel Grid.Row="2"
                Background="{StaticResource LighterColor}"
-               IsVisible="{Binding InOrderProducts, Converter={StaticResource SequenceIsNotEmptyConverter}}">
+               IsVisible="{Binding AnyProductsInOrder}">
             <WrapPanel Orientation="Horizontal"
                        HorizontalAlignment="Right"
                        VerticalAlignment="Stretch"
                        Margin="0 10">
                 <TextBlock Text="{Binding InOrderProducts.Count, StringFormat='In order \{0} count of products'}"
+                           VerticalAlignment="Center"
                            FontSize="14"
                            FontWeight="Bold"
                            FontStyle="Italic"
