--- a/ManagementSystem/ManagementSystem/Views/Main/HomeView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Main/HomeView.axaml
@@ -2,13 +2,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:ManagementSystem.Assets"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="ManagementSystem.Views.Main.HomeView">
     <Grid>
-        <TextBlock Text="Welcome to ManagementSystem"
-                   VerticalAlignment="Top"
-                   HorizontalAlignment="Left"
-                   FontSize="18"
-                   FontWeight="Bold"/>
+        <StackPanel Orientation="Horizontal"
+                    Spacing="0"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center">
+            <TextBlock Text="Welcome to "
+                       FontSize="18"
+                       FontWeight="Bold"
+                       VerticalAlignment="Center"/>
+            <TextBlock Text="{x:Static local:StaticResources.AppName}"
+                       FontSize="20"
+                       VerticalAlignment="Center"
+                       Foreground="{StaticResource DarkerColor}"
+                       FontWeight="Bold"/>
+        </StackPanel>
     </Grid>
 </UserControl>
