--- a/ManagementSystem/ManagementSystem/Views/Order/CreateOrderView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Order/CreateOrderView.axaml
@@ -2,7 +2,195 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:ManagementSystem.ViewModels.Order"
+             xmlns:productVms="clr-namespace:ManagementSystem.ViewModels.DataVM.Product"
+             xmlns:orderVms="clr-namespace:ManagementSystem.ViewModels.DataVM.Order"
+             xmlns:converter="clr-namespace:ManagementSystem.Converters"
+             xmlns:local="clr-namespace:ManagementSystem.Assets"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="ManagementSystem.Views.Order.CreateOrderView">
-    Welcome to Avalonia!
+             x:Class="ManagementSystem.Views.Order.CreateOrderView"
+             x:DataType="vm:CreateOrderViewModel">
+    <UserControl.Resources>
+        <converter:BytesImageConverter x:Key="ImageConverter"/>
+    </UserControl.Resources>
+    <ScrollViewer HorizontalScrollBarVisibility="Disabled">
+        <Grid RowDefinitions="auto * * auto"
+              Margin="0 0 25 0">
+            <Panel Grid.Row="0"
+                   Background="{StaticResource LighterColor}"
+                   Margin="0 0 0 10">
+                <TextBlock Text="Create order"
+                           FontSize="18"
+                           FontWeight="Bold"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Margin="20"/>
+            </Panel>
+            <Panel Grid.Row="1"
+                   Background="{StaticResource LighterColor}"
+                   Margin="0 10">
+                <StackPanel Spacing="10"
+                            Orientation="Vertical"
+                            Margin="25">
+                    <TextBlock Text="Order data"
+                               FontWeight="Bold"
+                               FontSize="18"
+                               Margin="0 10"/>
+                    <StackPanel Spacing="0"
+                                Orientation="Vertical">
+                        <TextBlock Text="Email"
+                                   FontWeight="Bold"/>
+                        <TextBox Watermark="buyer's email address"
+                                 Text="{Binding Model.BuyerEmail}"/>
+                    </StackPanel>
+                    <StackPanel Spacing="20"
+                                Orientation="Vertical">
+                        <TextBlock Text="Sale type"
+                                   FontWeight="Bold"/>
+                        <ComboBox ItemsSource="{Binding SaleTypes}"
+                                  SelectedItem="{Binding Model.TypeSale}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate x:DataType="orderVms:OrderSaleTypeViewModel">
+                                    <TextBlock Text="{Binding Type}"/>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                    </StackPanel>
+                    <StackPanel Spacing="20"
+                                Orientation="Vertical">
+                        <TextBlock Text="Payment type"
+                                   FontWeight="Bold"/>
+                        <ComboBox ItemsSource="{Binding PaymentTypes}"
+                                  SelectedItem="{Binding Model.PaymentType}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate x:DataType="orderVms:OrderPaymentTypeViewModel">
+                                    <TextBlock Text="{Binding Type}"/>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                    </StackPanel>
+                </StackPanel>
+            </Panel>
+            <Panel Grid.Row="2"
+                   Background="{StaticResource LighterColor}"
+                   Margin="0 10 0 20">
+                <DockPanel Margin="10">
+                    <TextBlock Text="Order products"
+                               FontStyle="Italic"
+                               FontSize="18"
+                               DockPanel.Dock="Top"
+                               FontWeight="Bold"/>
+                    <ItemsControl ItemsSource="{Binding Model.Products}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Vertical"
+                                            HorizontalAlignment="Stretch"
+                                            Spacing="20"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Border Padding="20"
+                                        BorderBrush="{StaticResource DarkerColor}"
+                                        BorderThickness="0 0 0 1.5">
+                                    <Grid ColumnDefinitions="Auto *">
+                                        <Image Grid.Column="0"
+                                               Source="{Binding Product.Images[0].Image, Converter={StaticResource ImageConverter}}"
+                                               Stretch="UniformToFill"
+                                               MinHeight="{x:Static local:StaticResources.ImageHeightAlt}"
+                                               MinWidth="{x:Static local:StaticResources.ImageWidthAlt}"
+                                               MaxWidth="{x:Static local:StaticResources.ImageWidthAlt}"
+                                               MaxHeight="{x:Static local:StaticResources.ImageHeightAlt}"
+                                               VerticalAlignment="Center"/>
+                                        <Panel Grid.Column="0"
+                                               Background="White"
+                                               IsVisible="{Binding Product.Images[0], Converter={x:Static ObjectConverters.IsNull}}"
+                                               MinHeight="{x:Static local:StaticResources.ImageHeightAlt}"
+                                               MinWidth="{x:Static local:StaticResources.ImageWidthAlt}"
+                                               MaxWidth="{x:Static local:StaticResources.ImageWidthAlt}"
+                                               MaxHeight="{x:Static local:StaticResources.ImageHeightAlt}"
+                                               VerticalAlignment="Center">
+                                            <Image Source="{x:Static local:StaticResources.NoImagePictureImage}"
+                                                   Width="96"
+                                                   Height="96"
+                                                   Margin="100"
+                                                   Stretch="Uniform"/>
+                                        </Panel>
+                                        <DockPanel Grid.Column="1"
+                                                   VerticalAlignment="Center">
+                                            <StackPanel Orientation="Horizontal"
+                                                        Spacing="20"
+                                                        DockPanel.Dock="Right"
+                                                        VerticalAlignment="Center">
+                                                <StackPanel Spacing="20"
+                                                            Orientation="Horizontal"
+                                                            VerticalAlignment="Center">
+                                                    <TextBlock Text="Count:" VerticalAlignment="Center"/>
+                                                    <TextBox Text="{Binding CountOfProduct}"
+                                                             Width="150"/>
+                                                </StackPanel>
+                                                <Button FontWeight="Bold"
+                                                        FontSize="14"
+                                                        Background="Brown"
+                                                        Padding="0"
+                                                        VerticalAlignment="Center"
+                                                        DockPanel.Dock="Right"
+                                                        Command="{Binding $parent[UserControl].((vm:CreateOrderViewModel)DataContext).RemoveFromOrder}"
+                                                        CommandParameter="{Binding .}">
+                                                    <Image Width="32"
+                                                           Height="32"
+                                                           Source="{x:Static local:StaticResources.MinusIconImage}"/>
+                                                </Button>
+                                            </StackPanel>
+                                            <StackPanel Spacing="20"
+                                                        Orientation="Horizontal"
+                                                        VerticalAlignment="Center"
+                                                        Margin="25 0">
+                                                <TextBlock Text="{Binding Product.Title, StringFormat='Title: \{0}'}"
+                                                           FontWeight="Bold"
+                                                           FontSize="18"/>
+                                                <TextBlock Text="{Binding Product.Cost, StringFormat='Cost: \{0}'}"
+                                                           FontWeight="Bold"
+                                                           FontSize="18"/>
+                                            </StackPanel>
+                                        </DockPanel>
+                                    </Grid>
+                                </Border>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </DockPanel>
+            </Panel>
+            <Grid Grid.Row="3"
+                  ColumnDefinitions="* 2 Auto">
+                <DockPanel Grid.Column="0">
+                    <Button Content="Save"
+                            Padding="20 5"
+                            Margin="20 2.5"
+                            VerticalAlignment="Center"
+                            DockPanel.Dock="Right"
+                            Command="{Binding SaveCommand}"/>
+                    <Panel Background="Brown"
+                           IsVisible="{Binding Status, Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
+                        <TextBlock Text="{Binding Status, StringFormat='errors: \{0}'}"
+                                   Foreground="White"
+                                   FontSize="14"
+                                   TextWrapping="Wrap"
+                                   Margin="20"/>
+                    </Panel>
+                </DockPanel>
+                <Panel Grid.Column="1"
+                       Background="{StaticResource DarkerColor}"/>
+                <Button Grid.Column="2"
+                        Classes="Flat"
+                        Content="Cansel"
+                        Margin="10 0 0 0"
+                        Padding="10 5"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"
+                        Foreground="Black"
+                        Command="{Binding CanselCommand}"/>
+            </Grid>
+        </Grid>
+    </ScrollViewer>
 </UserControl>
